kubernetes/mariadb-deploy.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  namespace: bookstack
  name: mariadb
  labels:
    stack: bookstack
    tier: database
spec:
  selector:
    matchLabels:
      app: mariadb
  template:
    metadata:
      labels:
        app: mariadb
    spec:
      containers:
        - env:
            - name: MYSQL_DATABASE
              value: bookstackapp
            - name: DB_PASSWORD
              valueFrom:
                secretKeyRef:
                  name: db-password
                  key: password
            - name: MYSQL_ROOT_PASSWORD
              value: <yourdbpass>
            - name: MYSQL_USER
              value: bookstack
            - name: PGID
              value: "1000"
            - name: PUID
              value: "1000"
            - name: TZ
              value: Europe/Warsaw
          image: lscr.io/linuxserver/mariadb
          name: bookstack-db
          ports:
          - name: db
            protocol: TCP
            containerPort: 3306
---
apiVersion: v1
kind: Service
metadata:
  namespace: bookstack
  labels:
    tier: database
  name: bookstack-db
spec:
  ports:
    - targetPort: db
      port: 3306
  selector:
    app: mariadb
