kubernetes/bookstack-deploy.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  namespace: bookstack
  name: bookstack
  labels:
    stack: bookstack
    tier: front
spec:
  selector:
    matchLabels:
      app: bookstack
  template:
    metadata:
      labels:
        app: bookstack
    spec:
      containers:
        - env:
            - name: DB_HOST
              value: bookstack-db
            - name: DB_DATABASE
              value: bookstackapp
            - name: DB_USERNAME
              value: bookstack
            - name: DB_PASSWORD
              valueFrom:
                secretKeyRef:
                  name: db-password
                  key: password
            - name: APP_URL
              value: http://piotrek.docker
            - name: PGID
              value: "1000"
            - name: PUID
              value: "1000"
          image: lscr.io/linuxserver/bookstack
          name: bookstack
          volumeMounts:
            - mountPath: /config
              name: bookstack-config
          ports:
            - containerPort: 80
          livenessProbe:
            httpGet:
              path: /
              port: 80
          readinessProbe:
            httpGet:
              path: /
              port: 80
      volumes:
        - name: bookstack-config
          persistentVolumeClaim:
            claimName: bookstack-claim0
---
apiVersion: v1
kind: Service
metadata:
  namespace: bookstack
  labels:
    tier: front
  name: bookstack
spec:
  ports:
    - port: 80
  selector:
    app: bookstack
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  namespace: bookstack
  name: bookstack
  labels:
    stack: bookstack
spec:
  ingressClassName: nginx
  tls:
    - hosts:
        - piotrek.docker
      secretName: ingress-cert
  rules:
  - host: piotrek.docker
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: bookstack
            port:
              number: 80
